# zono

./: .gitignore  .prettierrc  COPYRIGHT.md  Cargo.toml  LICENSE  README.md  index.html  next.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/desktop/: next.config.js  package.json
apps/desktop/src-tauri/src/: instance.rs  lib.rs  main.rs
apps/desktop/src-tauri/src/fs/: metadata.rs
apps/desktop/src-tauri/src/registry/: mod.rs  modrinth.rs
apps/desktop/src-tauri/tests/assets/metadata/: fabric.mod.json
apps/desktop/src/layout/ErrorReporter/: index.tsx
apps/desktop/src/layout/PageLayout/: AppBar.tsx  Sidebar.tsx  index.tsx
apps/desktop/src/pages/instances/: index.tsx
apps/desktop/src/redux/: hooks.ts  index.tsx
apps/desktop/src/redux/slices/: instance.ts
apps/desktop/src/theme/: dark.ts  system.tsx
apps/desktop/src/util/: logging.ts
apps/landing/: package.json
src/: App.tsx  main.tsx  router.tsx
src-tauri/: Cargo.toml  generate.rs  rustfmt.toml  tauri.conf.json
src-tauri/assets/: zono.default.toml
src-tauri/src/: config.rs  jar.rs  main.rs  rspc.rs
src-tauri/src/fs/: metadata.rs  mod.rs
src-tauri/src/registry/: curseforge.rs
src-tauri/tests/assets/: README.md
src/app/: layout.tsx  page.tsx
src/layout/ErrorReporter/: index.tsx
src/layout/PageLayout/: Sidebar.tsx
src/pages/: _app.tsx
src/redux/: hooks.ts  index.tsx  store.ts
src/redux/slices/: instance.ts  theme.ts
src/rspc/: .gitignore  index.tsx  transport.ts
src/theme/: base.ts  dark.ts  index.tsx  light.ts  system.tsx
src/views/Dashboard/: Chart.tsx  Orders.tsx  index.tsx  listItems.tsx
src/views/Instances/: Deposits.tsx  InstanceGroup.tsx  Title.tsx  index.tsx
src/views/instances/: InstanceCard.tsx  index.tsx
