[package]
name = "zono"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = {version = "1.2", features = [] }

[dependencies]
async-trait = "0.1"
config = "0.13"
lazy_static = "1"
once_cell = "1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.2", features = ["api-all"] }
thiserror = "1"
time = "0.3"
toml = "0.7"
zip = "0.6"
rspc = { version = "0.1", features = ["tauri"] }
tokio = { version = "1", features = ["macros", "rt"] }

[dev-dependencies]
pretty_assertions = "1"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[[bin]]
name = "generate"
path = "./generate.rs"
